--- a/_html/index.html
+++ b/_html/index.html
@@ -1,139 +1,105 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PetDevShop - O petshop do dev</title>
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="icon" type="image/png" href="images/favicon.png" />
+    <title>PetAdote - Encontre seu novo melhor amigo</title>
+    <link rel="stylesheet" href="../public/css/style.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
+        rel="stylesheet">
+
 </head>
+
 <body>
-<header>
-    <div class="container">
-        <a href="">PetDevShop</a>
-        <form method="GET" action="">
-            <input type="search" name="q" placeholder="Pesquise por raça" />
-        </form>
-    </div>
-</header>
-<nav>
-    <ul>
-        <li class="active"><a href="">Todos</a></li>
-        <li class=""><a href="">Cachorros</a></li>
-        <li class=""><a href="">Gatos</a></li>
-        <li class=""><a href="">Peixes</a></li>
-    </ul>
-</nav>
-<section class="banner" style="background-image: url('images/allanimals.jpg')">Todos os animais</section>
-<h2>Todos os animais disponíveis para adoção</h2>
+    <!-- Cabeçalho -->
+    <header>
+        <nav class="navbar">
+            <a href="#" class="logo">PetAdote</a>
+            <ul class="nav-links">
+                <li><a href="#">Todos</a></li>
+                <li><a href="#">Cachorros</a></li>
+                <li><a href="#">Gatos</a></li>
+                <li><a href="#">Pássaros</a></li>
+                <li><a href="#">Outros</a></li>
+            </ul>
+            <div class="menu-toggle">☰</div>
+        </nav>
+    </header>
 
-<div class="container list">
-    <div class="item">
-        <img src="images/pastor-alemao.jpg" class="item--image" />
-        <div class="item--name">Pastor-alemão</div>
-        <div class="item--color">Cor: Amarelo e Preto</div>
-        <div class="item--genre">Gênero: Masculino</div>
-    </div>
-    <div class="item">
-        <img src="images/labrador.jpg" class="item--image" />
-        <div class="item--name">Labrador-retriever</div>
-        <div class="item--color">Cor: Branco</div>
-        <div class="item--genre">Gênero: Masculino</div>
-    </div>
-    <div class="item">
-        <img src="images/zwergspitz.jpg" class="item--image" />
-        <div class="item--name">Zwergspitz</div>
-        <div class="item--color">Cor: Amarelo</div>
-        <div class="item--genre">Gênero: Feminino</div>
-    </div>
-    <div class="item">
-        <img src="images/husky.jpg" class="item--image" />
-        <div class="item--name">Husky Siberiano</div>
-        <div class="item--color">Cor: Branco e Preto</div>
-        <div class="item--genre">Gênero: Masculino</div>
-    </div>
-    <div class="item">
-        <img src="images/golden.jpg" class="item--image" />
-        <div class="item--name">Golden Retriever</div>
-        <div class="item--color">Cor: Amarelo</div>
-        <div class="item--genre">Gênero: Masculino</div>
-    </div>
-    <div class="item">
-        <img src="images/poodle.jpg" class="item--image" />
-        <div class="item--name">Poodle</div>
-        <div class="item--color">Cor: Branco</div>
-        <div class="item--genre">Gênero: Feminino</div>
-    </div>
-    <div class="item">
-        <img src="images/bulldog.jpg" class="item--image" />
-        <div class="item--name">Bulldog</div>
-        <div class="item--color">Cor: Branco e Amarelo</div>
-        <div class="item--genre">Gênero: Masculino</div>
-    </div>
-    <div class="item">
-        <img src="images/persa.jpg" class="item--image" />
-        <div class="item--name">Persa</div>
-        <div class="item--color">Cor: Amarelo</div>
-        <div class="item--genre">Gênero: Masculino</div>
-    </div>
-    <div class="item">
-        <img src="images/mainecoon.jpg" class="item--image" />
-        <div class="item--name">Maine Coon</div>
-        <div class="item--color">Cor: Preto e Branco</div>
-        <div class="item--genre">Gênero: Masculino</div>
-    </div>
-    <div class="item">
-        <img src="images/bengal.jpg" class="item--image" />
-        <div class="item--name">Bengal</div>
-        <div class="item--color">Cor: Branco, Preto e Amarelo</div>
-        <div class="item--genre">Gênero: Feminino</div>
-    </div>
-    <div class="item">
-        <img src="images/siames.jpg" class="item--image" />
-        <div class="item--name">Siamês</div>
-        <div class="item--color">Cor: Amarelo e Preto</div>
-        <div class="item--genre">Gênero: Masculino</div>
-    </div>
-    <div class="item">
-        <img src="images/sphynx.jpg" class="item--image" />
-        <div class="item--name">Sphynx</div>
-        <div class="item--color">Cor: Branco</div>
-        <div class="item--genre">Gênero: Masculino</div>
-    </div>
-    <div class="item">
-        <img src="images/neon.jpg" class="item--image" />
-        <div class="item--name">Tetra Neon</div>
-        <div class="item--color">Cor: Vermelho e Azul</div>
-        <div class="item--genre">Gênero: Masculino</div>
-    </div>
-    <div class="item">
-        <img src="images/matogrosso.jpg" class="item--image" />
-        <div class="item--name">Mato Grosso</div>
-        <div class="item--color">Cor: Laranja</div>
-        <div class="item--genre">Gênero: Masculino</div>
-    </div>
-    <div class="item">
-        <img src="images/limpavidro.jpg" class="item--image" />
-        <div class="item--name">Limpa Vidro</div>
-        <div class="item--color">Cor: Verde e Branco</div>
-        <div class="item--genre">Gênero: Masculino</div>
-    </div>
-    <div class="item">
-        <img src="images/tanictis.jpg" class="item--image" />
-        <div class="item--name">Tanictis</div>
-        <div class="item--color">Cor: Vermelho</div>
-        <div class="item--genre">Gênero: Masculino</div>
-    </div>
-    <div class="item">
-        <img src="images/acara.jpg" class="item--image" />
-        <div class="item--name">Acará Bandeira</div>
-        <div class="item--color">Cor: Preto</div>
-        <div class="item--genre">Gênero: Masculino</div>
-    </div>
-</div>
+    <!-- Banner -->
+    <section class="banner">
+        <div class="banner-text">
+            <h1>Todos os Animais</h1>
+            <p>Encontre seu novo melhor amigo.</p>
+        </div>
+    </section>
 
-<footer class="container">
-    Feito com ❤ pela B7Web
-</footer>
+    <!-- Seção de busca -->
+    <section class="search-section-section">
+        <div class="search-section">
+            <div class="search-container">
+                <input type="text" class="search-input" name="search-input" placeholder="Pesquise por uma categoria...">
+                <button class="search-button">Buscar</button>
+            </div>
+
+        </div>
+
+    </section>
+
+    <!-- Seção de resultados -->
+    <section class="results-section">
+        <h2 class="section-title">Animais disponíveis para adoção</h2>
+        <div class="pets-grid">
+            <!-- Card 1 -->
+            <div class="pet-card">
+                <img src="../public/images/pastor-alemao.jpg" alt="Luna" class="pet-image">
+                <div class="pet-info">
+                    <h3 class="pet-name">Luna</h3>
+                    <p class="pet-detail"><strong>Raça:</strong> Perra</p>
+                    <p class="pet-detail"><strong>Cor:</strong> Branco</p>
+                    <p class="pet-detail"><strong>Gênero:</strong> Fêmea</p>
+                </div>
+            </div>
+
+            <!-- Card 2 -->
+            <div class="pet-card">
+                <img src="../public/images/golden.jpg" alt="Thor" class="pet-image">
+                <div class="pet-info">
+                    <h3 class="pet-name">Thor</h3>
+                    <p class="pet-detail"><strong>Raça:</strong> Husky Siberiano</p>
+                    <p class="pet-detail"><strong>Cor:</strong> Cinza e Branco</p>
+                    <p class="pet-detail"><strong>Gênero:</strong> Macho</p>
+                </div>
+            </div>
+
+            <!-- Card 3 -->
+            <div class="pet-card">
+                <img src="../public/images/labrador.jpg" alt="Max" class="pet-image">
+                <div class="pet-info">
+                    <h3 class="pet-name">Max</h3>
+                    <p class="pet-detail"><strong>Raça:</strong> Golden Retriever</p>
+                    <p class="pet-detail"><strong>Cor:</strong> Dourado</p>
+                    <p class="pet-detail"><strong>Gênero:</strong> Macho</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Rodapé -->
+    <footer>
+        <p>© 2025 PetAdote — Todos os direitos reservados.</p>
+    </footer>
+
+    <script>
+        // Menu responsivo (apenas para a funcionalidade básica do menu)
+        document.querySelector('.menu-toggle').addEventListener('click', function () {
+            document.querySelector('.nav-links').classList.toggle('active');
+        });
+    </script>
 </body>
+
+</html>
+</body>
+
 </html>
